--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,5 +3,6 @@ deployment:
     - export DEPLOYPATH=/home/gopius/build.gopius.com/
     - /bin/cp -r * $DEPLOYPATH #copy all from root
 #    - /bin/cp -r ./public/* $DEPLOYPATH/public_html/
-    - /bin/cp ./public/js/*.js $DEPLOYPATH/public_html/js
-    - /bin/cp ./public/css/*.css $DEPLOYPATH/public_html/css
+    - /bin/cp ./public/assets $DEPLOYPATH
+    - /bin/cp ./public/m_server/index.php $DEPLOYPATH
+    - /bin/cp ./public/m_server/.htaccess $DEPLOYPATH
