--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,8 +1,9 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/gopius/build.gopius.com/
+    - export DEPLOYPATHSTORE=/home/gopius/build.gopius.com/storage
     - /bin/cp -r * $DEPLOYPATH #copy all from root
 #    - /bin/cp -r ./public/* $DEPLOYPATH/public_html/
-    - /bin/cp ./public/assets $DEPLOYPATH
-    - /bin/cp ./public/m_server/index.php $DEPLOYPATH
-    - /bin/cp ./public/m_server/.htaccess $DEPLOYPATH
+    - /bin/cp -R ./public/assets $DEPLOYPATH
+    - /bin/cp -R ./public/storage $DEPLOYPATH
+    
